--- a/styles.css
+++ b/styles.css
@@ -74,12 +74,12 @@ body {
 
     position: relative;
 
-    top: -400px;
+    top: -600px;
 
     padding: 50px;
 }
 .sideimgr {
-    width: 600px;
+    width: 30%;
     border-radius: 10px;
     margin: 5px;
 }
